src/objects/copado__User_Story_Commit__c.object
<CustomObject>
    <fields>
        <fullName>IsCommitUsable__c</fullName>
        <description>Commit Usable</description>
        <formula>IF(CASE(copado__Snapshot_Commit__r.copado__Status__c
,&apos;Complete&apos;,1
,0)==1,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Commit Status from the Snapshot Commit - only Complete Commits are usable</inlineHelpText>
        <label>Is Commit Usable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Commit Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>No changes</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Conflict</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WebURI__c</fullName>
        <description>Convenient WebURL to review the Commit in GitHub</description>
        <formula>copado__Snapshot_Commit__r.CommitWebURI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WebURI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Snapshot_Commit__c</fullName>
        <label>Snapshot Commit</label>
        <referenceTo>copado__Git_Org_Commit__c</referenceTo>
        <relationshipLabel>User Story Commits</relationshipLabel>
        <relationshipName>User_Story_Commits</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>User Story Commits</relationshipLabel>
        <relationshipName>User_Story_Commits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__View_in_Git__c</fullName>
        <formula>HYPERLINK(IF(AND(NOT(ISNULL(
copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c)), copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c != &apos;&apos;), copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c +  copado__Snapshot_Commit__r.copado__Commit_Id__c,&apos;&apos;), copado__Snapshot_Commit__r.copado__Commit_Id__c)</formula>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <label>User Story Commit</label>
    <nameField>
        <label>US Commit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Story Commits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>